--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 .header {
     background-color: #1F2937;
     display: flex;
@@ -16,9 +21,76 @@
     color: #E5E7Eb;
     display: flex;
     justify-content: space-between;
-    gap: 8px;
+    gap: 16px;
 }
 
 ul {
     list-style-type: none;
+}
+
+img {
+    height: auto;
+    width: 100px;
+    border-radius: 10px;
+}
+
+.content {
+    display: flex;
+    justify-content: space-around;
+    background-color: #1F2937;
+    flex: 1;
+}
+
+.main {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.caption {
+    font-size: 18px;
+    color: #E5E7Eb
+}
+
+.sign {
+    color: white;
+    background-color: blue;
+}
+
+.placeholder {
+    height: 200px;
+    width: 200px;
+    background-color: #E5E7Eb;
+}
+
+.information {
+    display: flex;
+    justify-content: space-between;
+    flex: 1;
+}
+
+.quote {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.sign-up {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 10px;
+    margin: 0px 50px;
+    padding: 30px;
+}
+
+.footer {
+    background-color: #1F2937;
+    color:#E5E7Eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
