--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ img {
     height: auto;
     width: 100px;
     border-radius: 10px;
+    border-color: blue;
 }
 
 .content {
@@ -39,6 +40,7 @@ img {
     justify-content: space-around;
     background-color: #1F2937;
     flex: 1;
+    align-items: center;
 }
 
 .main {
@@ -65,15 +67,34 @@ img {
 
 .information {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     flex: 1;
+}
+
+.paragraph {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.images {
+    display: flex;
+    justify-content: space-around;
+    gap: 8px;
+    flex-wrap: wrap;
 }
 
 .quote {
     display: flex;
-    flex: 1;
+    flex-shrink: 1;
     align-items: center;
     justify-content: center;
+    background-color: #E5E7EB;
+    font-size: 36px;
+    font-style:italic;
+
 }
 
 .sign-up {
